--- a/assets/index.html
+++ b/assets/index.html
@@ -7,9 +7,11 @@
     <title>Portfolio</title>
 </head>
 <body>
-
+<section>
     <h1>About me</h1>
+    <img src="https://i.ibb.co/VW9LsbP/pic.jpg" alt="pic of Sasha B.""
     <p>My name is Sasha. I'm wanting to become a software enginner with this bootcamp.</p>
+</section>
     
 </body>
 </html>
