added div element

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,10 +8,20 @@
 </head>
 <body>
 <section>
+    <div style="background-color:black;color:white;padding:20px;">
     <h1>About me</h1>
-    <img src="https://i.ibb.co/VW9LsbP/pic.jpg" alt="pic of Sasha B.""
+    <img src="https://i.ibb.co/VW9LsbP/pic.jpg" alt="pic of Sasha B.">
     <p>My name is Sasha. I'm wanting to become a software enginner with this bootcamp.</p>
+
+
+
+    
+
+
 </section>
     
+
+
+    </article>
 </body>
 </html>
