--- a/assets/index.html
+++ b/assets/index.html
@@ -10,7 +10,7 @@
 <section>
     <div style="background-color:black;color:white;padding:20px;">
     <h1>About me</h1>
-    <img src="https://i.ibb.co/VW9LsbP/pic.jpg" alt="pic of Sasha B.">
+    <img src="https://i.ibb.co/VW9LsbP/pic.jpg" alt="pic of Sasha B." width="500" height="600">
     <p>My name is Sasha. I'm wanting to become a software enginner with this bootcamp.</p>
 
 
