Added styles to the div with class

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,9 +13,14 @@
     <img src="https://i.ibb.co/VW9LsbP/pic.jpg" alt="pic of Sasha B." width="500" height="600">
     <p>My name is Sasha. I'm wanting to become a software enginner with this bootcamp.</p>
 
-
-
+    <div class="live">
+        <h2>Links</h2>
     
+        </div>
+    
+
+
+
 
 
 </section>
