--- a/assets/index.html
+++ b/assets/index.html
@@ -7,6 +7,8 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <h1>About me</h1>
+
     <header>
         <nav>
             <ul>
@@ -15,10 +17,10 @@
             
             </ul>
         </nav>
+    </header>
 <section>
     <div style="background-color:black;color:white;padding:20px;">
-    <h1>About me</h1>
-    <img src="https://i.ibb.co/VW9LsbP/pic.jpg" alt="pic of Sasha B." width="500" height="600">
+    <img src="https://i.ibb.co/VW9LsbP/pic.jpg" alt="pic of Sasha B." width="400" height="500">
     <p>My name is Sasha. I'm wanting to become a software enginner with this bootcamp.</p>
 
     <div class="live">
