--- a/assets/index.html
+++ b/assets/index.html
@@ -20,10 +20,10 @@
     </header>
 
     <section>
-        
-        <img src="https://i.ibb.co/VW9LsbP/pic.jpg" alt="pic of Sasha B." width="400" height="500">
-        <p>My name is Sasha. I'm wanting to become a software enginner with this bootcamp.</p>
-
+        <div class="tip">
+         <img src="https://i.ibb.co/VW9LsbP/pic.jpg" alt="pic of Sasha B." width="250" height="300">
+            <p>My name is Sasha. I'm wanting to become a software enginner with this bootcamp.</p>
+        </div>
 
         <section id="experience">
             <div class="live">
@@ -32,7 +32,7 @@
             </div>
         </section>  
 
-        <section id="contact-Info">
+        <section id="contact-info">
             <div class="live">
                 <h3>Contact Info</h3>
         
