added img element to show project

--- a/assets/index.html
+++ b/assets/index.html
@@ -37,7 +37,7 @@
               <h2>Experience</h2>
                 <p>Developer first Application was Horiseon</p>
                 <a href="http://127.0.0.1:5501/index.html">
-                    <img src="https://i.bb.co/s6b6g6j/Horiseon.png" alt="Horiseon" class="float-right" />
+                    <img src="../assets/images/Screenshot 2024-06-10 170915.png" alt="Horiseon" width="300" height="400" />
                 </a>
 
             </div>
