--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
           <h2>Experience</h2>
           <p>Developer first Application was Horiseon</p>
           <a href="http://127.0.0.1:5501/index.html">
-            <img
-              src="./assets/images/Screenshot 2024-06-10 170915.png"
+            <img src="./assets/images/Screenshot 2024-06-10 170915.png"
               alt="Horiseon"
               width="250"
               height="250"
