--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
 
     <section>
       <div class="tip">
-        <img
-          src="https://i.ibb.co/VW9LsbP/pic.jpg"
-          alt="pic of Sasha B."
-          width="250"
-          height="300"
-        />
+        <img src="https://i.ibb.co/VW9LsbP/pic.jpg"alt="pic of Sasha B." width="250" height="300"/>
         <p>My name is Sasha.</p>
       </div>
 
@@ -38,7 +33,8 @@
           <h2>Experience</h2>
           <p>Developer first Application was Horiseon</p>
           <a href="http://127.0.0.1:5501/index.html">
-            <img src="./assets/images/Screenshot 2024-06-10 170915.png"
+            <img
+              src="./assets/images/Screenshot 2024-06-10 170915.png"
               alt="Horiseon"
               width="250"
               height="250"
